@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-04T16:20:27Z",
-  "count_outdated" : 494,
-  "uniques_outdated" : 286,
-  "count" : 524,
-  "uniques" : 303,
+  "timestamp" : "2022-09-05T01:51:38Z",
+  "count_outdated" : 496,
+  "uniques_outdated" : 288,
+  "count" : 525,
+  "uniques" : 304,
   "clones" : [
-    {
-      "timestamp": "2022-08-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 2,
