@@ -1,3 +1,11 @@
+2022-09-05T01:51:38Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2990331778
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 286 494 / 303 524
+* notice: next accum: outdated-unq outdated-all / unq all: 288 496 / 304 525
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-21] / []
+
 2022-09-04T16:20:27Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2988766480
 * notice: last 14d: unq all: 5 30
